# honeycomb-haskell

./: .envrc  .gitignore  .travis.yml  ChangeLog.md  Makefile  README.md  cabal.project  ci.nix  default.nix  haskell-nix-src.json  hie.yaml  honeycomb.cabal  honeycomb.nix  package.yaml  shell-hoogle.nix  shell.nix  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  test.yml
.materialized/: default.nix
.materialized/.plan.nix/: honeycomb.nix
.plan.nix/: honeycomb.nix
core/: honeycomb.cabal
core/src/: Honeycomb.hs
core/src/Honeycomb/: Api.hs  Core.hs  Trace.hs
core/src/Honeycomb/Api/Types/: Event.hs  RequestOptions.hs  SendEventsResponse.hs  SendEventsServerReply.hs
core/src/Honeycomb/Core/: Types.hs
core/src/Honeycomb/Core/Internal/: Types.hs
core/src/Honeycomb/Core/Internal/Types/: TransportState.hs
core/src/Honeycomb/Core/Types/: Honey.hs  HoneyEvent.hs  HoneyOptions.hs  HoneyServerOptions.hs
core/src/Honeycomb/Trace/Types/: TraceId.hs
core/test/: ApiSpec.hs  Clients.hs
example/: Import.hs  Main.hs  Run.hs  Types.hs  example.cabal
example/src/: Main.hs
honeycomb/: honeycomb.cabal
honeycomb-example/: example.cabal
honeycomb-example/src/: Main.hs
honeycomb-servant/: honeycomb-servant.cabal
honeycomb-servant-client/: honeycomb-servant-client.cabal
honeycomb-servant-client-rio/: honeycomb-servant-client-rio.cabal
honeycomb-servant-client-rio/src/Servant/Client/Honeycomb/: RIO.hs
honeycomb-servant-client/src/Servant/Client/: Honeycomb.hs
honeycomb-servant-server/: honeycomb-servant-server.cabal
honeycomb-servant-server-rio/: honeycomb-servant-server-rio.cabal
honeycomb-servant-server-rio/src/Servant/Server/Honeycomb/: RIO.hs
honeycomb-servant-server/src/Servant/Server/: Honeycomb.hs
honeycomb-servant/src/Servant/: Honeycomb.hs
honeycomb-wai/: honeycomb-wai.cabal
honeycomb-wai/src/Network/Wai/: Honeycomb.hs
honeycomb/src/: Honeycomb.hs
honeycomb/src/Honeycomb/: Core.hs  Trace.hs
honeycomb/src/Honeycomb/Api/: Events.hs  Types.hs
honeycomb/src/Honeycomb/Api/Types/: Event.hs  HoneyField.hs  HoneyObject.hs  HoneyValue.hs  RequestOptions.hs
honeycomb/src/Honeycomb/Core/Internal/Types/: TransportState.hs
honeycomb/src/Honeycomb/Core/Types/: Honey.hs  HoneyEvent.hs  HoneyOptions.hs  HoneyResponse.hs  HoneyServerOptions.hs
honeycomb/src/Honeycomb/Trace/: TraceHeaderFormat.hs  Types.hs
honeycomb/src/Honeycomb/Trace/TraceHeaderFormat/: HoneycombFormat.hs  Types.hs  W3CFormat.hs
honeycomb/src/Honeycomb/Trace/Types/: ServiceName.hs  SpanContext.hs  SpanId.hs  SpanName.hs  SpanReference.hs  TraceId.hs
honeycomb/test/: TraceSpec.hs
materialized/: default.nix
materialized/.plan.nix/: honeycomb.nix
nix/: honeycomb.nix  pkgs.nix
nixpkgs/: default.nix
servant/: honeycomb-servant.cabal
servant-client/: honeycomb-servant-client.cabal
servant-client-rio/: honeycomb-servant-client-rio.cabal
servant-client/src/Servant/Client/: Honeycomb.hs
servant-rio/: honeycomb-servant-rio.cabal
servant-rio/src/Servant/Honeycomb/: RIO.hs
servant-server/: honeycomb-servant-server.cabal
servant-server-rio/: honeycomb-servant-server-rio.cabal
servant-server-rio/src/Servant/Server/Honeycomb/: RIO.hs
servant-server/src/Network/Wai/Honeycomb/: Servant.hs
servant-server/src/Servant/Server/: Honeycomb.hs
servant-server/test/: ServantSpec.hs  Spec.hs
servant/src/Network/Wai/Honeycomb/: Servant.hs
servant/src/Servant/: Honeycomb.hs
servant/test/: ServantSpec.hs
src/: Honeycomb.hs
src/Honeycomb/: Api.hs  Core.hs  Trace.hs  Transport.hs  Types.hs  Wai.hs
src/Honeycomb/Api/: Events.hs  Types.hs
src/Honeycomb/Api/Types/: ApiHost.hs  ApiKey.hs  Dataset.hs  Event.hs  HoneyObject.hs  HoneyValue.hs  RequestOptions.hs  SendEventsResponse.hs  SendEventsServerReply.hs
src/Honeycomb/Core/: Types.hs
src/Honeycomb/Core/Types/: Honey.hs  HoneyEvent.hs  HoneyException.hs  HoneyOptions.hs  HoneyResponse.hs  HoneyServerOptions.hs  TransportState.hs
src/Honeycomb/HTTP/: Client.hs
src/Honeycomb/Trace/: Types.hs
src/Honeycomb/Trace/Types/: ServiceName.hs  SpanContext.hs  SpanId.hs  SpanName.hs  SpanReference.hs  TraceId.hs
src/Honeycomb/Types/: Honey.hs  HoneyEvent.hs  HoneyException.hs  HoneyOptions.hs  HoneyResponse.hs  HoneyServerOptions.hs  TransportState.hs
src/Network/Monitoring/: Honeycomb.hs
src/Network/Monitoring/Honeycomb/: Api.hs  Events.hs  Trace.hs  Transport.hs  Types.hs  Wai.hs
src/Network/Monitoring/Honeycomb/Api/: Events.hs  Types.hs
src/Network/Monitoring/Honeycomb/Api/Types/: ApiKey.hs  Dataset.hs  Event.hs  HoneyObject.hs  HoneyValue.hs  RequestOptions.hs
src/Network/Monitoring/Honeycomb/Trace/: Types.hs
src/Network/Monitoring/Honeycomb/Trace/Types/: Propagation.hs  PropagationData.hs  ServiceName.hs  SpanContext.hs  SpanId.hs  SpanName.hs  SpanReference.hs  TraceId.hs  Tracer.hs
src/Network/Monitoring/Honeycomb/Types/: ApiKey.hs  Dataset.hs  FrozenHoneyEvent.hs  Honey.hs  HoneyEvent.hs  HoneyEventBuilder.hs  HoneyException.hs  HoneyObject.hs  HoneyOptions.hs  HoneyQueueMessage.hs  HoneyResponse.hs  HoneyServerOptions.hs  HoneyValue.hs  SendEventsResponse.hs  TransportState.hs
test/: ApiSpec.hs  Clients.hs  HoneycombSpec.hs  Spec.hs  UtilSpec.hs
unliftio-wai/: unliftio-wai.cabal
unliftio-wai/src/UnliftIO/: Wai.hs
wai/: honeycomb-wai.cabal
wai-unliftio/: wai-unliftio.cabal
wai-unliftio/src/Network/Wai/: UnliftIO.hs
wai/src/Network/Wai/: Honeycomb.hs
