cabal-version:  1.12

name:           honeycomb
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/EarnestResearch/libhoney-hs#readme>
homepage:       https://github.com/EarnestResearch/honeycomb#readme
bug-reports:    https://github.com/EarnestResearch/honeycomb/issues
author:         Gary Coady
maintainer:     gcoady@earnestresearch.com
copyright:      2019 Earnest Research
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/EarnestResearch/honeycomb

library
  exposed-modules:
      Honeycomb
      Honeycomb.Api
      Honeycomb.Api.Events
      Honeycomb.Api.Types
      Honeycomb.Api.Types.ApiHost
      Honeycomb.Api.Types.ApiKey
      Honeycomb.Api.Types.Dataset
      Honeycomb.Api.Types.Event
      Honeycomb.Api.Types.HoneyObject
      Honeycomb.Api.Types.HoneyValue
      Honeycomb.Api.Types.RequestOptions
      Honeycomb.Trace
      Honeycomb.Trace.Types
      Honeycomb.Trace.Types.ServiceName
      Honeycomb.Trace.Types.SpanContext
      Honeycomb.Trace.Types.SpanId
      Honeycomb.Trace.Types.SpanName
      Honeycomb.Trace.Types.SpanReference
      Honeycomb.Trace.Types.TraceId
      Honeycomb.Transport
      Honeycomb.Types
      Honeycomb.Types.Honey
      Honeycomb.Types.HoneyEvent
      Honeycomb.Types.HoneyException
      Honeycomb.Types.HoneyOptions
      Honeycomb.Types.HoneyResponse
      Honeycomb.Types.HoneyServerOptions
      Honeycomb.Types.TransportState
  other-modules:
      Paths_honeycomb
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable BangPatterns BinaryLiterals ConstraintKinds DataKinds DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable DoAndIfThenElse EmptyDataDecls ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MonadFailDesugaring MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PartialTypeSignatures PatternGuards PolyKinds RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving TupleSections TypeFamilies TypeSynonymInstances ViewPatterns
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fhide-source-paths
  build-depends:
      aeson
    , base >=4.11 && <10
    , bytestring
    , hashable
    , http-client
    , http-client-tls
    , http-types
    , microlens
    , microlens-mtl
    , mtl
    , network-uri
    , random
    , resourcet
    , scientific
    , stm
    , text
    , time
    , unliftio
    , unordered-containers
    , uuid
  default-language: Haskell2010
