cabal-version:  2.2

name:           honeycomb
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/EarnestResearch/honeycomb-haskell#readme>
homepage:       https://github.com/EarnestResearch/honeycomb-haskell#readme
bug-reports:    https://github.com/EarnestResearch/honeycomb-haskell/issues
author:         Gary Coady
maintainer:     gcoady@earnestresearch.com
copyright:      2019 Earnest Research
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/EarnestResearch/honeycomb-haskell

common shared-properties
  default-language: Haskell2010
  build-depends:
      base == 4.*
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -fhide-source-paths
  other-extensions:
      FlexibleInstances
      GeneralizedNewtypeDeriving
      NamedFieldPuns
      OverloadedStrings
      ScopedTypeVariables
      DeriveGeneric
      DeriveAnyClass
      TupleSections
  build-depends:
      aeson
    , base >=4.11 && <10
    , bytestring
    , hashable
    , http-client
    , http-client-tls
    , http-types
    , microlens
    , microlens-mtl
    , mtl
    , network-uri
    , random
    , scientific
    , stm
    , text
    , time
    , unliftio
    , unordered-containers
    , uuid

library
  import:
      shared-properties
  exposed-modules:
      Honeycomb
      Honeycomb.Api
      Honeycomb.Api.Events
      Honeycomb.Api.Types
      Honeycomb.Api.Types.ApiHost
      Honeycomb.Api.Types.ApiKey
      Honeycomb.Api.Types.Dataset
      Honeycomb.Api.Types.Event
      Honeycomb.Api.Types.HoneyObject
      Honeycomb.Api.Types.HoneyValue
      Honeycomb.Api.Types.RequestOptions
      Honeycomb.Api.Types.SendEventsResponse
      Honeycomb.Api.Types.SendEventsServerReply
      Honeycomb.Trace
      Honeycomb.Trace.Types
      Honeycomb.Trace.Types.ServiceName
      Honeycomb.Trace.Types.SpanContext
      Honeycomb.Trace.Types.SpanId
      Honeycomb.Trace.Types.SpanName
      Honeycomb.Trace.Types.SpanReference
      Honeycomb.Trace.Types.TraceId
      Honeycomb.Transport
      Honeycomb.Core
      Honeycomb.Core.Types
      Honeycomb.Core.Types.Honey
      Honeycomb.Core.Types.HoneyEvent
      Honeycomb.Core.Types.HoneyException
      Honeycomb.Core.Types.HoneyOptions
      Honeycomb.Core.Types.HoneyResponse
      Honeycomb.Core.Types.HoneyServerOptions
      Honeycomb.Core.Types.TransportState
  other-modules:
      Paths_honeycomb
  hs-source-dirs:
      src

test-suite tests
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is:
      Spec.hs
  build-depends:
      honeycomb
    , hspec
    , hspec-discover
  build-tool-depends:
      hspec-discover:hspec-discover
  other-modules:
      ApiSpec
  hs-source-dirs:
      test

