cabal-version:  3.0

name:           honeycomb-servant-rio
version:        0.1.0.0
synopsis:       Client library for the Honeycomb observability service
description:
    Honeycomb is a service which provides visibility over
    high cardinality attributes, allowing deep insight into
    the performance and behaviour of your applications. This
    library offers a simple way of interacting with the service,
    including a tracing API.
category:       Monitoring
homepage:       https://github.com/EarnestResearch/honeycomb-haskell#readme
bug-reports:    https://github.com/EarnestResearch/honeycomb-haskell/issues
author:         Gary Coady
maintainer:     gcoady@earnestresearch.com
copyright:      (c) 2019-2020 Earnest Research
license:        Apache-2.0
license-file:   LICENSE
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type: git
    location: git://github.com/EarnestResearch/honeycomb-haskell.git

library
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
    if impl(ghc >= 8.2.0)
        ghc-options:
            -fhide-source-paths
    if impl(ghc >= 8.8.0)
        ghc-options:
            -fwrite-ide-info
    other-extensions:
        DataKinds
        FlexibleContexts
        RankNTypes
        NoImplicitPrelude
    hs-source-dirs: src
    exposed-modules:
        Servant.Honeycomb.RIO
    build-depends:
        base
      , honeycomb
      , honeycomb-servant
      , rio
      , servant-server
