cabal-version:      3.0
name:               honeycomb-servant
version:            0.1.0.0
synopsis:           Client library for the Honeycomb observability service
description:
  Honeycomb is a service which provides visibility over
  high cardinality attributes, allowing deep insight into
  the performance and behaviour of your applications. This
  library offers a simple way of interacting with the service,
  including a tracing API.

category:           Monitoring
homepage:           https://github.com/EarnestResearch/honeycomb-haskell#readme
bug-reports:        https://github.com/EarnestResearch/honeycomb-haskell/issues
author:             Gary Coady
maintainer:         gcoady@earnestresearch.com
copyright:          (c) 2019-2020 Earnest Research
license:            Apache-2.0
license-file:       LICENSE
extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type:     git
  location: git://github.com/EarnestResearch/honeycomb-haskell.git

library
  build-depends:
    , base                  >=4.11 && <10
    , containers
    , honeycomb
    , honeycomb-wai
    , servant
    , servant-server
    , text
    , unordered-containers
    , wai
    , wai-unliftio

  default-language: Haskell2010
  exposed-modules:  Servant.Honeycomb
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if impl(ghc >=8.2.0)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.8.0)
    ghc-options: -fwrite-ide-info

  hs-source-dirs:   src
  other-extensions:
    DeriveAnyClass
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
